chore: optimize codebase, clean static files, fix builder warnings and enhance form accessibility