@@ -10,7 +10,10 @@ import com.example.webbanhang.service.CatalogService;
 import com.example.webbanhang.service.RealtimeService;
 import com.example.webbanhang.service.ShopService;
 import com.example.webbanhang.service.RecycleBinService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.Valid;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -18,6 +21,7 @@ import java.util.Map;
 
 @RestController
 @RequestMapping("/api/admin")
+@Tag(name = "Admin Operations", description = "Endpoints dành cho quản trị viên quản lý sản phẩm, danh mục, đơn hàng, coupon và người dùng")
 public class AdminController {
     private final CatalogService catalogService;
     private final ShopService shopService;
@@ -36,6 +40,7 @@ public class AdminController {
     }
 
     @GetMapping("/dashboard")
+    @Operation(summary = "Lấy dữ liệu thống kê tổng quan (Dashboard)")
     public ApiResponse<Map<String, Object>> dashboard(@RequestParam(value = "period", required = false, defaultValue = "all") String period, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.dashboard(period));
@@ -44,56 +49,63 @@ public class AdminController {
     // ── Categories ──
 
     @PostMapping("/categories")
-    public ApiResponse<Map<String, Object>> createCategory(@RequestBody CategoryRequest body, HttpServletRequest request) {
+    @Operation(summary = "Tạo mới một danh mục sản phẩm")
+    public ApiResponse<Map<String, Object>> createCategory(@Valid @RequestBody CategoryRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         Map<String, Object> result = catalogService.createCategory(body);
-        realtimeService.categoryChanged("created", result);
+        if (realtimeService != null) realtimeService.categoryChanged("created", result);
         return ApiResponse.ok(result);
     }
 
     @PutMapping("/categories/{id}")
-    public ApiResponse<Map<String, Object>> updateCategory(@PathVariable long id, @RequestBody CategoryRequest body, HttpServletRequest request) {
+    @Operation(summary = "Cập nhật thông tin danh mục")
+    public ApiResponse<Map<String, Object>> updateCategory(@PathVariable long id, @Valid @RequestBody CategoryRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         Map<String, Object> result = catalogService.updateCategory(id, body);
-        realtimeService.categoryChanged("updated", result);
+        if (realtimeService != null) realtimeService.categoryChanged("updated", result);
         return ApiResponse.ok(result);
     }
 
     @DeleteMapping("/categories/{id}")
+    @Operation(summary = "Xóa một danh mục sản phẩm")
     public ApiResponse<Void> deleteCategory(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         catalogService.deleteCategory(id);
-        realtimeService.categoryChanged("deleted", Map.of("id", id));
+        if (realtimeService != null) realtimeService.categoryChanged("deleted", Map.of("id", id));
         return ApiResponse.ok("Deleted", null);
     }
 
     // ── Products ──
 
     @PostMapping("/products")
-    public ApiResponse<Map<String, Object>> createProduct(@RequestBody ProductRequest body, HttpServletRequest request) {
+    @Operation(summary = "Tạo mới một sản phẩm")
+    public ApiResponse<Map<String, Object>> createProduct(@Valid @RequestBody ProductRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         Map<String, Object> result = catalogService.createProduct(body);
-        realtimeService.productChanged("created", result);
+        if (realtimeService != null) realtimeService.productChanged("created", result);
         return ApiResponse.ok(result);
     }
 
     @PutMapping("/products/{id}")
-    public ApiResponse<Map<String, Object>> updateProduct(@PathVariable long id, @RequestBody ProductRequest body, HttpServletRequest request) {
+    @Operation(summary = "Cập nhật thông tin sản phẩm")
+    public ApiResponse<Map<String, Object>> updateProduct(@PathVariable long id, @Valid @RequestBody ProductRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         Map<String, Object> result = catalogService.updateProduct(id, body);
-        realtimeService.productChanged("updated", result);
+        if (realtimeService != null) realtimeService.productChanged("updated", result);
         return ApiResponse.ok(result);
     }
 
     @DeleteMapping("/products/{id}")
+    @Operation(summary = "Xóa một sản phẩm")
     public ApiResponse<Void> deleteProduct(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         catalogService.deleteProduct(id);
-        realtimeService.productChanged("deleted", Map.of("id", id));
+        if (realtimeService != null) realtimeService.productChanged("deleted", Map.of("id", id));
         return ApiResponse.ok("Deleted", null);
     }
 
     @PutMapping("/products/bulk-category")
+    @Operation(summary = "Cập nhật danh mục hàng loạt cho danh sách sản phẩm")
     public ApiResponse<Void> bulkUpdateCategory(@RequestBody Map<String, Object> body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         List<?> rawIds = (List<?>) body.get("productIds");
@@ -102,7 +114,7 @@ public class AdminController {
         }
         List<Long> productIds = rawIds.stream()
                 .map(x -> ((Number) x).longValue())
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
         Long categoryId = body.get("categoryId") != null ? ((Number) body.get("categoryId")).longValue() : null;
         catalogService.bulkUpdateCategory(productIds, categoryId);
         if (realtimeService != null) {
@@ -115,24 +127,28 @@ public class AdminController {
     // ── Coupons ──
 
     @GetMapping("/coupons")
+    @Operation(summary = "Lấy danh sách tất cả các coupon")
     public ApiResponse<List<Map<String, Object>>> coupons(HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.coupons());
     }
 
     @PostMapping("/coupons")
-    public ApiResponse<Map<String, Object>> createCoupon(@RequestBody CouponRequest body, HttpServletRequest request) {
+    @Operation(summary = "Tạo mới một coupon giảm giá")
+    public ApiResponse<Map<String, Object>> createCoupon(@Valid @RequestBody CouponRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.createCoupon(body));
     }
 
     @PutMapping("/coupons/{id}")
-    public ApiResponse<Map<String, Object>> updateCoupon(@PathVariable long id, @RequestBody CouponRequest body, HttpServletRequest request) {
+    @Operation(summary = "Cập nhật thông tin coupon")
+    public ApiResponse<Map<String, Object>> updateCoupon(@PathVariable long id, @Valid @RequestBody CouponRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.updateCoupon(id, body));
     }
 
     @DeleteMapping("/coupons/{id}")
+    @Operation(summary = "Xóa một coupon")
     public ApiResponse<Void> deleteCoupon(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         shopService.deleteCoupon(id);
@@ -142,12 +158,14 @@ public class AdminController {
     // ── Users ──
 
     @GetMapping("/users")
+    @Operation(summary = "Lấy danh sách tất cả người dùng hệ thống")
     public ApiResponse<List<Map<String, Object>>> users(HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.allUsers());
     }
 
     @PutMapping("/users/{id}/status")
+    @Operation(summary = "Cập nhật trạng thái người dùng (Ví dụ: BAN tài khoản)")
     public ApiResponse<Void> updateUserStatus(@PathVariable long id, @RequestBody Map<String, Object> body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         String status = String.valueOf(body.get("status"));
@@ -158,6 +176,7 @@ public class AdminController {
 
 
     @DeleteMapping("/users/{id}")
+    @Operation(summary = "Xóa vĩnh viễn tài khoản người dùng")
     public ApiResponse<Void> deleteUser(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         shopService.deleteUser(id);
@@ -167,28 +186,34 @@ public class AdminController {
     // ── Orders ──
 
     @GetMapping("/orders")
+    @Operation(summary = "Lấy danh sách tất cả đơn hàng")
     public ApiResponse<List<Map<String, Object>>> orders(HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.orders(0, true));
     }
 
     @GetMapping("/orders/{id}")
+    @Operation(summary = "Lấy chi tiết một đơn hàng")
     public ApiResponse<Map<String, Object>> order(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(shopService.order(0, id, true));
     }
 
     @PutMapping("/orders/{id}/status")
-    public ApiResponse<Map<String, Object>> status(@PathVariable long id, @RequestBody OrderStatusRequest body, HttpServletRequest request) {
+    @Operation(summary = "Cập nhật trạng thái đơn hàng")
+    public ApiResponse<Map<String, Object>> status(@PathVariable long id, @Valid @RequestBody OrderStatusRequest body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         Map<String, Object> result = shopService.updateOrderStatus(id, body.status());
-        realtimeService.orderChanged("status_updated", Map.of("id", id, "status", body.status()));
+        if (realtimeService != null) {
+            realtimeService.orderChanged("status_updated", Map.of("id", id, "status", body.status()));
+        }
         return ApiResponse.ok(result);
     }
 
     // ── Revenue Report ──
 
     @GetMapping("/revenue-report")
+    @Operation(summary = "Lấy báo cáo phân tích doanh thu chi tiết")
     public ApiResponse<Map<String, Object>> revenueReport(
             @RequestParam(value = "period", required = false, defaultValue = "all") String period,
             HttpServletRequest request) {
@@ -197,6 +222,7 @@ public class AdminController {
     }
 
     @PutMapping("/ranks/{id}")
+    @Operation(summary = "Cập nhật số tiền chi tiêu tối thiểu của một hạng thành viên")
     public ApiResponse<Void> updateRank(@PathVariable String id, @RequestBody Map<String, Object> body, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         java.math.BigDecimal minSpent = new java.math.BigDecimal(String.valueOf(body.get("minSpent")));
@@ -207,12 +233,14 @@ public class AdminController {
     // ── Recycle Bin ──
 
     @GetMapping("/recycle-bin")
+    @Operation(summary = "Lấy danh sách các tài nguyên trong thùng rác")
     public ApiResponse<List<Map<String, Object>>> getRecycleBin(HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         return ApiResponse.ok(recycleBinService.getRecycleBinItems());
     }
 
     @PostMapping("/recycle-bin/{id}/restore")
+    @Operation(summary = "Khôi phục tài nguyên đã xóa từ thùng rác")
     public ApiResponse<Void> restoreItem(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         recycleBinService.restoreItem(id);
@@ -223,6 +251,7 @@ public class AdminController {
     }
 
     @DeleteMapping("/recycle-bin/{id}")
+    @Operation(summary = "Xóa vĩnh viễn tài nguyên khỏi thùng rác")
     public ApiResponse<Void> deletePermanently(@PathVariable long id, HttpServletRequest request) {
         currentUserService.requireAdmin(request);
         recycleBinService.deletePermanently(id);
